--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1689,6 +1689,33 @@ a {
   display: none;
 }
 
+.app-game__infos {
+  font-size: 13px;
+  height: 40px;
+  line-height: 40px;
+  overflow: hidden;
+  padding: 0 8px;
+  background-color: #fff;
+  border-bottom: 1px solid rgba(0,0,0,.12);
+}
+
+.app-game__infos .app-icon {
+  position: relative;
+  top: 3px;
+  font-size: 16px;
+  padding-left: 4px;
+  color: rgba(0,0,0,.54);
+}
+
+.app-game__infos .app-icon:first-child {
+  padding-left: 0;
+}
+
+.app-game__played-actions {
+  float: right;
+  margin-top: -1px;
+}
+
 .app-game__toggle {
   position: fixed;
   bottom: 0;
@@ -2765,6 +2792,12 @@ a {
     font-size: 12px;
   }
 
+  .app-game__infos {
+    font-size:  12px;
+    height: 36px;
+    line-height: 36px;
+  }
+
   .app-table--game-actions .app-button {
     font-size: 11px;
   }
@@ -3040,6 +3073,10 @@ a {
   }
 
   .app-button__fixed--game {
+    display: none;
+  }
+
+  .app-game__played-actions {
     display: none;
   }
 
