--- a/public/app/components/templates/modal-challenges.html
+++ b/public/app/components/templates/modal-challenges.html
@@ -31,7 +31,7 @@
                                 <td class="app-table__user mdl-data-table__cell--non-numeric">
                                     <img avatar
                                          class="app-table__avatar" 
-                                         ng-src="{{challenge.avatar}}">
+                                         src="{{challenge.avatar}}">
                                     <span class="app-table__name">{{ challenge.name }}</span>
                                 </td>
                                 <td class="app-table__points">{{ challenge.points }}</td>
