--- a/public/app/game/templates/profile-game.html
+++ b/public/app/game/templates/profile-game.html
@@ -16,7 +16,7 @@
                 <img avatar
                      show-profile="player" 
                      class="app-avatar app-profile__avatar" 
-                     ng-src="{{ player.avatar }}">
+                     src="{{ player.avatar }}">
             </a>
         </div>
         <div class="app-profile__name">
