--- a/public/app/home/templates/home.html
+++ b/public/app/home/templates/home.html
@@ -18,7 +18,7 @@
                     <td class="app-table__user mdl-data-table__cell--non-numeric">
                         <img avatar
                              class="app-table__avatar" 
-                             ng-src="{{ game.avatar }}">
+                             src="{{ game.avatar }}">
                         <span class="app-table__name">{{ game.name }}</span>
                     </td>
                     <td class="app-table__points">{{ game.points }}</td>
@@ -66,7 +66,7 @@
                     <td class="app-table__user mdl-data-table__cell--non-numeric">
                         <img avatar
                              class="app-table__avatar" 
-                             ng-src="{{challenger.avatar}}">
+                             src="{{challenger.avatar}}">
                         <span class="app-table__name">{{ challenger.name }}</span>
                     </td>
                     <td>
@@ -109,7 +109,7 @@
                     <td class="app-table__user mdl-data-table__cell--non-numeric">
                         <img avatar
                              class="app-table__avatar" 
-                             ng-src="{{ favorite.avatar }}">
+                             src="{{ favorite.avatar }}">
                         <span class="app-table__name">{{ favorite.name }}</span>
                     </td>
                     <td title="{{ 'blitz'|translate }}">
@@ -149,7 +149,7 @@
         </a>
         <div class="app-modal__head">
             <div class="app-profile__card-avatar">
-                <img avatar class="app-avatar app-profile__avatar" ng-src="{{ challenger.avatar }}">
+                <img avatar class="app-avatar app-profile__avatar" src="{{ challenger.avatar }}">
             </div>
             {{ challenger.name }}
         </div>
