--- a/public/app/components/templates/modal-challenges.html
+++ b/public/app/components/templates/modal-challenges.html
@@ -27,7 +27,7 @@
                         </thead>
                         <tbody ng-if="challenges.length">
                             <tr ng-repeat="challenge in challenges"
-                                show-profile="challenge">
+                                show-profile="challenge.uid">
                                 <td class="app-table__user mdl-data-table__cell--non-numeric">
                                     <img avatar
                                          class="app-table__avatar" 
