--- a/public/app/game/templates/game.html
+++ b/public/app/game/templates/game.html
@@ -113,7 +113,7 @@
         <span ng-if="game.result.value === 2">0-1</span>
         <span ng-if="game.finish">({{ game.result.name | translate }})</span>
         <i class="app-icon material-icons">today</i>
-        <span>{{ getLocaleDate(game.startTime) }}</span>
+        <span>{{ game.startTime|localeDateTime }}</span>
         <div ng-if="game.finish" 
              class="app-game__played-actions">
             <button ng-disabled="turn.first === null"
