--- a/public/css/style.css
+++ b/public/css/style.css
@@ -964,13 +964,46 @@ a {
   color: #FF9800;
 }
 
-.app-profile__action .app-icon--friend {
-  font-size: 32px;
+.app-profile__action .app-button {
+  margin-left: 8px;
 }
 
 .app-profile--challenger {
   height: auto;
   margin: 32px 0 12px 0;
+}
+
+.app-card__profile-title {
+  position: relative;
+  height: 80px;
+  padding-bottom: 32px;
+  background-color: #795548;
+  color: #fff;
+}
+
+.app-card__profile-title .app-profile__action {
+  top: 16px;
+  right: 16px;
+}
+
+.app-card__profile-title .app-profile__action .app-button {
+  background-color: #5D4037;
+}
+
+.app-card__profile-avatar {
+  position: absolute;
+  left: 28px;
+  top: 54px;
+}
+
+.app-card__profile-stats {
+  max-width: 500px;
+  margin: 0 auto;
+  padding-bottom: 24px;
+}
+
+.app-card__profile-actions .app-button.is-active {
+  color: #795548;
 }
 
 .app-avatar {
@@ -1082,7 +1115,7 @@ a {
   margin-right: 0;
 }
 
-.app-profile__game {
+.app-profile__info-game {
   margin-top: 20px;
 }
 
@@ -1154,6 +1187,59 @@ a {
 
 .app-profile__stat--losses .app-profile__stat-value {
   color: #F44336;
+}
+
+.app-profile__game {
+  padding: 8px;
+  position: relative;
+}
+
+.app-profile__game:after {
+  display: block;
+  content: '';
+  clear: both;
+}
+
+.app-profile__game-board {
+  width: 240px;
+}
+
+.app-profile__game-content {
+  margin-left: 248px;
+  width: 480px;
+  /* position: relative; */
+}
+
+.app-profile__game-result {
+  text-align: center;
+  font-size: 20px;
+  padding: 8px 0 16px 0;
+}
+
+.app-profile__game-infos {
+  position: absolute;
+  bottom: 8px;
+}
+
+.app-profile__game-infos .app-icon {
+  color: rgba(0,0,0,.54);
+  font-size: 20px;
+  vertical-align: middle;
+  margin-left: 4px;
+}
+
+.app-profile__game-infos .app-icon:first-child {
+  margin-left: 0;
+}
+
+.app-profile__game-player {
+  text-align: center;
+  display: inline-block;
+  width: 238px;
+}
+
+.app-profile__game-avatar {
+  padding: 8px 0;
 }
 
 .app-element__head {
@@ -2665,6 +2751,11 @@ a {
 }
 
 @media screen and (max-width: 745px) {
+  
+  .app-card__profile-stats {
+    padding-top: 24px;
+    padding: 24px 8px
+  }
 
   .app-game__message {
     padding: 5px 10px;
@@ -3214,6 +3305,10 @@ a {
   }
 
   .app-profile__card-avatar .app-avatar {
+    width: 50px;
+    height: 50px;
+  }
+  .app-card__profile-avatar .app-avatar {
     width: 50px;
     height: 50px;
   }
