--- a/public/app/profile/templates/profile.html
+++ b/public/app/profile/templates/profile.html
@@ -48,6 +48,22 @@
             </div>
         </div>
         <div class="app-profile__game-content">
+            <div class="app-profile__game-infos">
+                <div class="app-profile__game-type">
+                    <i class="app-icon material-icons">{{ game.data.type === 'blitz' ? 'flash_on' : 'timer' }}</i>
+                    <span>{{ game.data.type | translate }}</span>
+                    <i class="app-icon material-icons">schedule</i>
+                    <span>{{ game.data.time / 60000 }} + {{ game.data.increment / 1000 }}</span>
+                    <i class="app-icon material-icons">games</i>
+                    <span ng-if="game.data.result.value === 1">1-0</span>
+                    <span ng-if="game.data.result.value === 0">½-½</span>
+                    <span ng-if="game.data.result.value === 2">0-1</span>
+                </div>
+                <div class="app-profile__game-date">
+                    <i class="app-icon material-icons">today</i>
+                    <span>{{ game.data.startTime|localeDateTime }}</span>
+                </div>
+            </div>
             <div class="app-profile__game-result">{{ game.data.result.name | translate }}</div>
             <div class="app-profile__game-player">
                 <span class="app-profile__game-name">{{ game.data.white.name }}</span>
@@ -78,18 +94,6 @@
                         {{ game.data.black.resultPoints | relativeNumber }}
                     </span>
                 </div>
-            </div>
-            <div class="app-profile__game-infos">
-                <i class="app-icon material-icons">today</i>
-                <span>{{ game.data.startTime|localeDateTime }}</span>
-                <i class="app-icon material-icons">{{ game.data.type === 'blitz' ? 'flash_on' : 'timer' }}</i>
-                <span>{{ game.data.type | translate }}</span>
-                <i class="app-icon material-icons">schedule</i>
-                <span>{{ game.data.time / 60000 }} + {{ game.data.increment / 1000 }}</span>
-                <i class="app-icon material-icons">games</i>
-                <span ng-if="game.data.result.value === 1">1-0</span>
-                <span ng-if="game.data.result.value === 0">½-½</span>
-                <span ng-if="game.data.result.value === 2">0-1</span>
             </div>
         </div>
     </div>
