--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1213,19 +1213,31 @@ a {
 .app-profile__game-result {
   text-align: center;
   font-size: 20px;
-  padding: 8px 0 16px 0;
+  padding-bottom: 16px;
 }
 
 .app-profile__game-infos {
-  position: absolute;
-  bottom: 8px;
+  padding-bottom: 16px;
 }
 
-.app-profile__game-infos .app-icon {
+.app-profile__game-type {
+  font-size: 20px;
+  line-height: 24px;
+}
+
+.app-profile__game-type .app-icon {
   color: rgba(0,0,0,.54);
   font-size: 20px;
-  vertical-align: middle;
+  position: relative;
+  top: 2px;
   margin-left: 4px;
+}
+
+.app-profile__game-date .app-icon {
+  color: rgba(0,0,0,.54);
+  font-size: 16px;
+  position: relative;
+  top: 2px;
 }
 
 .app-profile__game-infos .app-icon:first-child {
