--- a/public/app/profile/templates/profile-actions.html
+++ b/public/app/profile/templates/profile-actions.html
@@ -2,7 +2,7 @@
     <a ng-if="profile.link"
        ng-href="/profile/{{ profile.uid }}"
        class="app-profile__link mdl-button mdl-js-button mdl-button--fab mdl-button--mini-fab">
-        <i class="app-icon material-icons">add</i>
+        <i class="app-icon material-icons">more_horiz</i>
     </a>
     <button ng-disabled="isFriend"
             ng-click="toogleFavorite()"
