--- a/public/css/style.css
+++ b/public/css/style.css
@@ -968,6 +968,14 @@ a {
   margin-left: 8px;
 }
 
+.app-profile__more {
+  margin-top: 16px;
+}
+
+.app-profile__more .app-button {
+  color: #DB4437;
+}
+
 .app-profile--challenger {
   height: auto;
   margin: 32px 0 12px 0;
@@ -1205,14 +1213,14 @@ a {
 }
 
 .app-profile__game-content {
-  margin-left: 248px;
-  width: 480px;
+  margin-left: 256px;
+  width: 472px;
   /* position: relative; */
 }
 
 .app-profile__game-result {
   text-align: center;
-  font-size: 20px;
+  font-size: 16px;
   padding-bottom: 16px;
 }
 
@@ -1221,13 +1229,13 @@ a {
 }
 
 .app-profile__game-type {
-  font-size: 20px;
+  font-size: 16px;
   line-height: 24px;
 }
 
 .app-profile__game-type .app-icon {
   color: rgba(0,0,0,.54);
-  font-size: 20px;
+  font-size: 16px;
   position: relative;
   top: 2px;
   margin-left: 4px;
@@ -1247,7 +1255,7 @@ a {
 .app-profile__game-player {
   text-align: center;
   display: inline-block;
-  width: 238px;
+  width: 230px;
 }
 
 .app-profile__game-avatar {
