Revert "fix src avatar"
This reverts commit 0f024da79b9b696d506cbe15b4671b48505ab2a1.

--- a/public/app/game/templates/profile-game.html
+++ b/public/app/game/templates/profile-game.html
@@ -16,7 +16,7 @@
                 <img avatar
                      show-profile="player" 
                      class="app-avatar app-profile__avatar" 
-                     src="{{ player.avatar }}">
+                     ng-src="{{ player.avatar }}">
             </a>
         </div>
         <div class="app-profile__name">
