--- a/public/app/ranking/templates/ranking.html
+++ b/public/app/ranking/templates/ranking.html
@@ -35,7 +35,7 @@
                 <td class="app-table__user mdl-data-table__cell--non-numeric">
                     <img avatar
                          class="app-table__avatar" 
-                         src="{{rank.avatar}}">
+                         ng-src="{{rank.avatar}}">
                     <span class="app-table__name">{{ rank.name }}</span>
                 </td>
                 <td class="app-table__points">{{ rank.points }}</td>
