--- a/public/app/home/templates/home.html
+++ b/public/app/home/templates/home.html
@@ -44,7 +44,7 @@
                     <td class="app-table__user mdl-data-table__cell--non-numeric">
                         <img avatar
                              class="app-table__avatar" 
-                             src="{{ game.avatar }}">
+                             ng-src="{{ game.avatar }}">
                         <span class="app-table__name">{{ game.name }}</span>
                     </td>
                     <td class="app-table__points">{{ game.points }}</td>
@@ -86,7 +86,7 @@
                     <td class="app-table__user mdl-data-table__cell--non-numeric">
                         <img avatar
                              class="app-table__avatar" 
-                             src="{{challenger.avatar}}">
+                             ng-src="{{challenger.avatar}}">
                         <span class="app-table__name">{{ challenger.name }}</span>
                     </td>
                     <td>
@@ -122,7 +122,7 @@
                     <td class="app-table__user mdl-data-table__cell--non-numeric">
                         <img avatar
                              class="app-table__avatar" 
-                             src="{{ favorite.avatar }}">
+                             ng-src="{{ favorite.avatar }}">
                         <span class="app-table__name">{{ favorite.name }}</span>
                     </td>
                     <td title="{{ 'blitz'|translate }}">
@@ -162,7 +162,7 @@
         </a>
         <div class="app-modal__head">
             <div class="app-profile__card-avatar">
-                <img avatar class="app-avatar app-profile__avatar" src="{{ challenger.avatar }}">
+                <img avatar class="app-avatar app-profile__avatar" ng-src="{{ challenger.avatar }}">
             </div>
             {{ challenger.name }}
         </div>
