Revert "fix css"
This reverts commit 90d07634fe4395c5bf9eb83abf20641fc8613fd0.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3193,6 +3193,8 @@ a {
     text-transform: none;
     font-size: 13px;
   }
+  .app-element__badge {
+  }
 
   .app-form__choices-colors .app-modal__settings-field {
     padding-top: 8px;
